Fix modal window overflow #3

--- a/css/style.css
+++ b/css/style.css
@@ -422,11 +422,10 @@ body {
   background-color: #fbfbfb;
   position: fixed;
   left: 0;
-  top: 0;
+  bottom: 0;
   border-radius: 50px 50px 0 0;
   box-sizing: border-box;
   padding: 0 20px;
-  margin-top: 104px;
   transform: translateY(100%);
   z-index: 1;
 }
